fix spacing between level elements

--- a/src/style.css
+++ b/src/style.css
@@ -25,10 +25,8 @@ code {
 
 .chart
 {
-  display: inline-block;
-  width: 33%;
+  margin: 0 auto
 }
-
 
 
 
